# vnpy_sopt

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
script/: run.py
vnpy_sopt/: __init__.py
vnpy_sopt/api/: __init__.py  sopt_constant.py
vnpy_sopt/api/generator/: generate_api_functions.py  generate_data_type.py  generate_struct.py  sopt_md_source_function.cpp  sopt_md_source_process.cpp  sopt_struct.py  sopt_td_header_define.h  sopt_td_header_function.h  sopt_td_header_on.h  sopt_td_header_process.h  sopt_td_source_function.cpp  sopt_td_source_module.cpp  sopt_td_source_on.cpp  sopt_td_source_process.cpp  sopt_td_source_switch.cpp  sopt_td_source_task.cpp  sopt_typedef.py
vnpy_sopt/api/vnsopt/: vnsopt.h
vnpy_sopt/api/vnsopt/vnsoptmd/: vnsoptmd.cpp  vnsoptmd.h
vnpy_sopt/api/vnsopt/vnsopttd/: vnsopttd.cpp  vnsopttd.h
vnpy_sopt/gateway/: __init__.py  sopt_gateway.py
